# holocron

./: .env.example  .gitignore  .release-please-manifest.json  404.html  CHANGELOG.md  CLAUDE.md  Caddyfile.example  Makefile  README.md  compose.prod.caddy.yml  compose.prod.yml  docker-compose.yml  index.html  index.txt  install.sh  package.json  pyproject.toml  release-please-config.json
.github/workflows/: docs.yml  lint-pr.yml  openapi.yml  release-please.yml  release.yml
404/: index.html
docs/: README.md  concepts.md  deployment.md  development.md  extensions.md  getting-started.md  glossary.md  map.md  openapi.json  plugins.md  search.md  webhooks.md
docs/architecture/: README.md
docs/concepts/: index.html  index.txt
docs/deployment/: index.html  index.txt
docs/development/: index.html  index.txt
docs/extensions/: index.html  index.txt
docs/getting-started/: index.html  index.txt
docs/glossary/: index.html  index.txt
docs/map/: index.html  index.txt
docs/plugins/: index.html  index.txt
docs/search/: index.html  index.txt
docs/webhooks/: index.html  index.txt
plugins/: index.html  index.txt
v0.0.3/: 404.html  index.html  index.txt  search-index.json
v0.0.3/plugins/: index.html  index.txt
v0.0.4-alpha/: 404.html  index.html  index.txt
v0.0.4-alpha/plugins/: index.html  index.txt
v0.1.0-alpha/: index.html  index.txt  search-index.json
v0.1.0-alpha/404/: index.html
v0.2.0-alpha/: 404.html  index.html  index.txt
v0.2.1-alpha/: index.html  index.txt
v0.2.1-alpha/404/: index.html
v0.3.0-alpha/: 404.html  index.html  index.txt
(+298 files in other folders)
